Camino only - Bug 400748: Fix type-to-select in selects with optgroups. sr=pink